Fixed broken styles

--- a/src/infoPages/css/infoPage.css
+++ b/src/infoPages/css/infoPage.css
@@ -21,7 +21,7 @@ body, html {
 
 .bgimg-1 {
     background-image: url('../../images/ewu2.jpg');
-    min-height: 100%;
+    min-height: 400px;
     image-rendering: auto;
     image-rendering: crisp-edges;
     image-rendering: pixelated;
